--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
       content="retroPro - Game Collection Application!"
     />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <title>retroPro</title>
   </head>
   <body>
